--- a/phnew/css/SignIn.css
+++ b/phnew/css/SignIn.css
@@ -5,6 +5,270 @@
     box-sizing: border-box;
 }
 
+
+/*header footer*/
+/*header*/
+
+  
+
+/*header*/
+*{
+  padding: 0;
+  margin: 0;
+}
+
+.header1{
+  background-image: linear-gradient(to right, #defcf9,#cadefc,#c3bef0);
+  /*position: sticky;*/
+  top: 0;
+  z-index: 10;
+}
+.header1 .name h1{
+  text-align: center;
+  font-weight: 900;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  margin-top: -20px;
+}
+
+.header1 .r2{
+  width: 100%;
+  display: inline;
+}
+
+.logo img{
+  margin-bottom: -144px;
+}
+
+.r2 .maccount{
+  display: inline;
+}
+.r2 .sbtn input{
+  position: relative;
+  left: 563px;
+  width: 400px;
+  height: 40px;
+  border-top-left-radius: 15px;
+  border-bottom-left-radius: 15px;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+  background-color: white;
+  padding-left:15px ;
+}
+
+.r2 .sbtn input{
+  margin-right: 421px;
+  margin-top: 31px;
+}
+
+.r2 .maccount ul{
+  margin-left: 1200px;
+  margin-top: -5px;
+}
+
+.r2 .maccount li{
+  position: relative;
+  bottom: 50px;
+  list-style: none;
+  display: inline;
+  margin-left: 30px;
+  margin-top: -20px;
+}
+a{
+  text-decoration: none;
+}
+
+/*
+.r2 .maccount a img{
+  border-radius: 60%;
+  background-color: yellow;
+  width: 30px;
+  height: 30px;
+  margin-top: 5px;
+}*/
+
+
+
+.shopping{
+  position: relative;
+  right: 60px;
+  margin-top:-5px ;
+  text-align: right;
+}
+.header1 .shopping img{
+  width: 30px;
+  margin-top: -7px;
+}
+.shopping span{
+  background: rgb(150, 12, 230);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  position: absolute;
+  top: -5px;
+  left: 80%;
+  padding: 3px 10px;
+  margin-left: 65px;
+}
+
+ion-icon {
+  font-size: 30px;
+  margin-left: 100px;
+  position: relative;
+  top: 10px;
+}
+
+
+.navbar {
+  overflow: hidden;
+  background-color: #46acd8;
+}
+
+.navbar a {
+  float: left;
+  font-size: 16px;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+  margin-left: 80px;
+}
+
+.dropdown .dropbtn {
+  font-size: 16px;  
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+  background-color: rgb(221, 17, 159);
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+
+/*Footer*/
+.footer {
+  width: 1536px;
+  margin-left: -8px;
+  margin-bottom: -10px;
+}
+
+.footer-yellow {
+  background-color: #59bae7;
+  height: 350px;
+}
+
+.footer-black {
+  background-color: black;
+  height: 20px;
+  color: white;
+  margin-top: -22px;
+}
+
+.product-range {
+  margin-left: 120px;
+}
+
+.product-range a{
+  color: black;
+  line-height: 15px;
+  padding: 30px;
+  margin-top: -25px;
+  text-decoration: none;
+  font-size: 18px;
+  margin-left: -30px;
+}
+
+.information {
+  margin-top: -310px;
+  margin-left: 510px;
+}
+
+.information a{
+  color: black;
+  line-height: 15px;
+  padding: 30px;
+  margin-top: -250px;
+  text-decoration: none;
+  font-size: 18px;
+  margin-left: -30px;
+}
+
+.customer-servise {
+  margin-top: -150px;
+  margin-left: 850px;
+}
+
+.customer-servise a{
+  color: black;
+  line-height: 15px;
+  padding: 30px;
+  margin-top: -250px;
+  text-decoration: none;
+  font-size: 18px;
+  margin-left: -28px;
+}
+
+.followus {
+  margin-left: 1200px;
+  margin-top: -149px;
+}
+
+.followus img {
+  width: 20px;
+  height: 20px;
+}
+
+.followus .imgbtn {
+  background-color: #59bae7;
+  border-radius: 0px;
+  border-color: #59bae7;
+}
+
+
+
+
+
+
+
+
+
 body{
     font-size: 1em;
     background-image: linear-gradient(to left, rgb(156, 42, 223), rgb(85, 173, 207));
@@ -268,173 +532,4 @@ a{
     height: 300px;
     border-radius: 5px;
     box-shadow: 0 15px 25px rgba(97, 149, 87, 0.5);
-}
-
-
-/*header footer*/
-.header1 {
-    background-color: #0096DA;
-    height: 30px;
-    width: 1540px;
-    margin-left: -12px;
-}
-
-.name {
-    margin-top: -10px;
-}
-
-.header2 {
-    background-color: #59bae7;
-    height: 90px;
-    width: 1540px;
-    margin-left: -12px;
-}
-
-.logoimg {
-    height: 80px;
-    width: 100px;
-    margin-left: 80px;
-    margin-top: 5px;
-}
-
-.search-container {
-    display: flex;
-    width: 500px;
-    margin-left: 500px;
-    margin-top: -65px;
-  }
-  
-  #search-input {
-    flex: 1;
-    padding: 8px;
-    font-size: 16px;
-  }
-  
-  #search-button {
-    padding: 8px 16px;
-    background-color: #a1cadf;
-    color: black;
-    border: none;
-    cursor: pointer;
-  }
-  
-  #search-results {
-    margin-top: 16px;
-  }
-
-.header2 a{
-    float: right;
-    color: black;
-    text-align: center;
-    line-height: 25px;
-    padding: 30px;
-    margin-top: -62px;
-    text-decoration: none;
-    font-size: 18px;
-    margin-right: 10px;
-}
-
-.header3 {
-    background-color: #a1cadf;
-    height: 40px;
-    width: 1540px;
-    margin-left: -12px;
-    margin-top: 20px; 
-}
-
-.content3 {
-    margin-left: 10px;
-    margin-top: -20px;
-}
-
-.content3 a{
-    float: left;
-    color: black;
-    text-align: center;
-    line-height: 25px;
-    padding: 30px;
-    margin-top: -25px;
-    text-decoration: none;
-    font-size: 18px;
-    margin-left: -5px;
-}
-
-
-
-.footer {
-    width: 1536px;
-    margin-left: -8px;
-    margin-bottom: -10px;
-}
-
-.footer-yellow {
-    background-color: #59bae7;
-    height: 350px;
-}
-
-.footer-black {
-    background-color: black;
-    height: 20px;
-    color: white;
-    margin-top: -22px;
-}
-
-.product-range {
-    margin-left: 120px;
-}
-
-.product-range a{
-    color: black;
-    line-height: 15px;
-    padding: 30px;
-    margin-top: -25px;
-    text-decoration: none;
-    font-size: 18px;
-    margin-left: -30px;
-}
-
-.information {
-    margin-top: -310px;
-    margin-left: 510px;
-}
-
-.information a{
-    color: black;
-    line-height: 15px;
-    padding: 30px;
-    margin-top: -250px;
-    text-decoration: none;
-    font-size: 18px;
-    margin-left: -30px;
-}
-
-.customer-servise {
-    margin-top: -150px;
-    margin-left: 850px;
-}
-
-.customer-servise a{
-    color: black;
-    line-height: 15px;
-    padding: 30px;
-    margin-top: -250px;
-    text-decoration: none;
-    font-size: 18px;
-    margin-left: -28px;
-}
-
-.followus {
-    margin-left: 1200px;
-    margin-top: -149px;
-}
-
-.followus img {
-    width: 20px;
-    height: 20px;
-}
-
-.followus .imgbtn {
-    background-color: #59bae7;
-    border-radius: 0px;
-    border-color: #59bae7;
 }
